# NoiseRemover

./: .clang-format  .gitignore  CMakeLists.txt  README.md  resource.rc  resources.qrc  styles.qss
resources/: resource.rc  resources.qrc
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/window/: CMakeLists.txt
src/window/window/: mainwindow.cpp  mainwindow.hpp
