add_subdirectory(app)
add_subdirectory(window)
add_subdirectory(libAudioProc)
add_subdirectory(libCfgManager)
add_subdirectory(libCmdBuilder)
add_subdirectory(libDeepFilterCmdBuilder)
add_subdirectory(libDeepFilterNetFfi)
add_subdirectory(libEngine)
add_subdirectory(libFfmpegCmdBuilder)
add_subdirectory(libFfmpegSettings)
add_subdirectory(libHardwareUtils)
add_subdirectory(libICmdBuilder)
add_subdirectory(libThreadPool)
add_subdirectory(libUtils)
add_subdirectory(libVideoProc)